# UAP-ML

./: README.md  pyproject.toml
model/: tokenizer.joblib  xgb_model.h5
model/tabnet_model.h5/: model_params.json  network.pt
src/uap_1/: app.py  input_and_predict.py  model_comparison.py  shap_visualization.py
