[project]
name = "UAP-1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ellys", email = "ellysputri19@gmail.com"},
]
dependencies = ["streamlit>=1.41.1", "tensorflow>=2.18.0", "xgboost>=2.1.3", "tabnet>=0.1.6", "pandas>=2.2.3", "joblib>=1.4.2", "scikit-learn>=1.6.0", "matplotlib>=3.10.0", "shap>=0.46.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
